# python-logging-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  AZURE.md  CHECKLIST.md  CI_CD.md  CONTRIBUTING.md  CORRELATION_ID.md  DEPLOYMENT.md  DOCUMENTATION_AUDIT.md  Dockerfile  EXAMPLES.md  FLUENT_BIT.md  GETTING_STARTED.md  GITHUB_SETUP.md  KUBERNETES.md  LOGGING.md  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPO_README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-k8s.yml  docker.yml  quality.yml  tests.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  correlation_id.py  logging.py  middleware.py
app/models/: schemas.py
fluent-bit/: custom_parsers.conf  fluent-bit.conf  setup.sh
k8s/: deploy.sh  fastapi-configmap.yaml  fastapi-deployment.yaml  fastapi-hpa.yaml  fastapi-service.yaml  fluent-bit-clusterrole.yaml  fluent-bit-clusterrolebinding.yaml  fluent-bit-configmap.yaml  fluent-bit-daemonset.yaml  fluent-bit-namespace.yaml  fluent-bit-serviceaccount.yaml  namespace.yaml  setup-azure.sh
logs/: .gitkeep
tests/: conftest.py  test_api.py
